test/TestSuite/Syntax/Errors/taskroot_leaf.tjp
project test "Test" "1.0" 2011-03-27 +2m

task t "T"

taskreport "R" {
# MARK: error 7 taskroot_leaf
  taskroot t
}
